2003-05-30  Dhananjay Deshpande  <dhananjayd@kpitcummins.com>

	* config/h8300/h8300.c (h8300_tiny_constant_address_p): Return
	true if TARGET_NORMAL_MODE.

2003-05-30  Roger Sayle  <roger@eyesopen.com>

	* cse.c (cse_insn): Simplify REG_EQUAL note on libcalls when
	making a substitution.
	(dead_libcall_p): If directly replacing a libcall with a
	constant value produces an invalid instruction, also try forcing
	the constant into the constant pool.
	* expr.c (emit_move_insn): Add a REG_EQUAL note when it is not
	obvious that the source is a constant.
	(compress_float_constant): Use set_unique_reg_note to place
	REG_EQUAL notes on instructions.

2003-05-30  Eric Christopher  <echristo@redhat.com>

	* config/mips/mips.c (extern_list): Add GTY marker.
	(extern_head): Separate out definition. Add marker.
	(mips_output_external): Use ggc_alloc for extern_list
	allocation.
	(mips_output_external_libcall): Ditto.

2003-05-30  Florian Weimer  <fw@deneb.enyo.de>

	* doc/install.texi: Ada-enabled bootstrap requires GNAT 3.14 or
	later.

2003-05-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* vax.h (ASM_GENERATE_INTERNAL_LABEL): Fix format specifier
	warnings.
	(PRINT_OPERAND): Likewise.

2003-05-30  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/mips/mips.h (SUBTARGET_ASM_DEBUGGING_SPEC): Move
	-mdebug/-no-mdebug switches ...
	(MDEBUG_ASM_SPEC): ... here.
	Use only with gas.
	(EXTRA_SPECS): Initialize mdebug_asm_spec.

2003-05-29  Matt Kraai  <kraai@alumni.cmu.edu>

	* gthr-gnat.c: Remove #undef UNUSED.
	(__gnat_default_lock, __gnat_default_unlock): Prototype.
	(__gnat_task_lock, __gnat_task_unlock): Make declarations
	prototypes.
	(__gnat_install_locks): Convert declaration to ISO C90, make
	parameter declarations prototypes, and remove blank line.
	* gthr-gnat.h (__gnat_install_locks): Make parameter
	declarations prototypes.

2003-05-29  Jason Merrill  <jason@redhat.com>

	* Makefile.in (unstrap): Remove stage_last after make unstage1.
